--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.username=app_user
 spring.datasource.password=app_password
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# Let Spring Boot run schema.sql and data.sql
+spring.sql.init.mode=never
+spring.sql.init.encoding=UTF-8
+spring.sql.init.platform=mysql
