--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Let Spring Boot run schema.sql and data.sql
+# rename name to always
 spring.sql.init.mode=never
 spring.sql.init.encoding=UTF-8
 spring.sql.init.platform=mysql
